--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,21 @@
 @import "bourbon/bourbon";
+@import "reset";
+
+// typography
+
+body {
+  font-family:"Fira Sans";
+}
+
+body > header h1, {
+  font-size:2.3em;
+  line-height:1.2em;
+  font-weight: 900;
+}
+
+header > p {
+  color:#666;
+  font-size:1.15em;
+  line-height:1.4em;
+  font-weight:400;
+}
