--- a/main.css
+++ b/main.css
@@ -46,22 +46,93 @@ table {
   border-spacing: 0; }
 
 body {
-  font-family: "Fira Sans"; }
+  font-family: "Fira Sans";
+  color: #666; }
 
 body > header h1 {
+  color: black;
   font-size: 2.3em;
   line-height: 1.2em;
   font-weight: 900; }
 
 header > p {
   color: #666;
-  font-size: 1.15em;
+  font-size: 1.2em;
   line-height: 1.4em;
   font-weight: 400; }
 
 .project h1 {
   font-size: 1.8em;
   font-weight: 300;
-  color: #CF000F; }
+  color: #CF000F;
+  padding-bottom: 0.2em; }
+.project h2 {
+  font-size: 1.2em;
+  line-height: 1.2em;
+  padding-bottom: 1.2em;
+  font-weight: 600; }
+.project p {
+  line-height: 1.45em; }
+
+body {
+  margin: 0 15px; }
+
+header {
+  text-align: right;
+  width: 520px;
+  max-width: 100%; }
+
+section {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-direction: row;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  -o-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  box-align: start;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  -o-align-items: flex-start;
+  align-items: flex-start;
+  -ms-flex-align: start; }
+
+.project {
+  border: solid 1px #666;
+  border-radius: 7px;
+  padding: 20px 27px 10px 27px;
+  min-height: 280px;
+  width: 466px;
+  max-width: 83%;
+  margin: 20px; }
 
 /*# sourceMappingURL=main.css.map */
