--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,8 +48,13 @@ body {
 
 header {
   text-align:right;
-  width:520px;
+  width:580px;
   max-width:100%;
+  padding-top:40px;
+
+  p {
+    padding:2em 0;
+  }
 }
 
 section {
@@ -63,9 +68,9 @@ section {
 .project {
   border:solid 1px #666;
   border-radius:7px;
-  padding:20px 27px 10px 27px;
-  min-height:280px;
-  width:466px;
+  padding:27px 20px 10px 20px;
+  min-height:300px;
+  width:520px;
   max-width:83%;
   margin:20px;
 }
