--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,13 +47,20 @@ body {
 }
 
 header {
-  text-align:right;
+  text-align:center;
   width:550px;
   max-width:100%;
   padding-top:40px;
+  @media(min-width:651px) {
+    margin-top:100px;
+    text-align:right;
+  }
 
   p {
     padding:2em 0;
+    @media(min-width:651px) {
+      margin-bottom:50px;
+    }
   }
 }
 
