--- a/main.css
+++ b/main.css
@@ -49,6 +49,13 @@ body {
   font-family: "Fira Sans";
   color: #666; }
 
+a {
+  text-decoration: none;
+  transition: color .2s ease-in-out;
+  color: #00D4C0; }
+  a:hover {
+    color: #008a7d; }
+
 body > header h1 {
   color: black;
   font-size: 2.3em;
@@ -137,6 +144,7 @@ section {
   -ms-flex-align: start; }
 
 .project {
+  transition: all .2s ease-in-out;
   border: solid 1px #666;
   border-radius: 7px;
   padding: 27px 20px 10px 20px;
@@ -170,6 +178,8 @@ section {
   -o-justify-content: space-between;
   justify-content: space-between;
   -ms-flex-pack: justify; }
+  .project:hover {
+    transform: scale(1.09); }
   .project .links {
     margin-top: 1em; }
 
