Fira Sans stopped working for reasons unfathomable, so switching to SF and basis sans font stack

--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ table {
   border-spacing: 0; }
 
 body {
-  font-family: "Fira Sans";
+  font-family: -apple-system,sans-serif;
   color: #666; }
 
 a {
